--- a/VKBaseProject.vcxproj
+++ b/VKBaseProject.vcxproj
@@ -74,8 +74,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(SolutionDir)include;$(SolutionDir)include\ImGUI;$(SolutionDir)Source\Headers;$(SolutionDir)vendor\glfw\include;$(VULKAN_SDK)\Include;$(SolutionDir)vendor\glm;$(IncludePath)</IncludePath>
     <ExternalIncludePath>$(SolutionDir)include;$(ExternalIncludePath)</ExternalIncludePath>
-    <OutDir>$(SolutionDir)\bin\$(Configuration)-$(Platform)</OutDir>
-    <IntDir>$(SolutionDir)\bin\$(Configuration)-$(Platform)</IntDir>
+    <OutDir>$(SolutionDir)\bin\$(Configuration)-$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)\bin\$(Configuration)-$(Platform)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
