--- a/VKBaseProject.vcxproj
+++ b/VKBaseProject.vcxproj
@@ -204,6 +204,7 @@
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\BufferUtils.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
+    <ClCompile Include="Source\Cube.cpp" />
     <ClCompile Include="Source\Device.cpp" />
     <ClCompile Include="Source\EntryPoint.cpp" />
     <ClCompile Include="Source\ImGUILayer.cpp" />
