--- a/VKBaseProject.vcxproj.filters
+++ b/VKBaseProject.vcxproj.filters
@@ -170,6 +170,9 @@
     <ClCompile Include="Source\CameraController.cpp">
       <Filter>Source\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Timestep.cpp">
+      <Filter>Source\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Headers\RendererInclude.h">
