--- a/VKBaseProject.vcxproj
+++ b/VKBaseProject.vcxproj
@@ -151,6 +151,8 @@
     <None Include="Shaders\compile.bat" />
     <None Include="Shaders\ComputeShader.comp" />
     <None Include="Shaders\fragShader.glsl" />
+    <None Include="Shaders\ui.frag.spv" />
+    <None Include="Shaders\ui.vert.spv" />
     <None Include="Shaders\vertShader.glsl" />
   </ItemGroup>
   <ItemGroup>
