--- a/VKBaseProject.vcxproj.filters
+++ b/VKBaseProject.vcxproj.filters
@@ -72,18 +72,30 @@
     <None Include="Shaders\vertShader.glsl">
       <Filter>Source\Shader</Filter>
     </None>
-    <None Include="Shaders\ComputeShader.comp">
-      <Filter>Source\Shader</Filter>
-    </None>
     <None Include="Shaders\ui.frag.spv">
       <Filter>Source\Shader</Filter>
     </None>
     <None Include="Shaders\ui.vert.spv">
       <Filter>Source\Shader</Filter>
     </None>
+    <None Include="Shaders\showTexture.vert.glsl">
+      <Filter>Source\Shader</Filter>
+    </None>
+    <None Include="Shaders\showTexture.frag.glsl">
+      <Filter>Source\Shader</Filter>
+    </None>
+    <None Include="Shaders\definitions.glsl">
+      <Filter>Source\Shader</Filter>
+    </None>
+    <None Include="Shaders\rayTrace.comp">
+      <Filter>Source\Shader</Filter>
+    </None>
+    <None Include="Shaders\random.glsl">
+      <Filter>Source\Shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source\VulkanBaseRenderer.cpp">
+    <ClCompile Include="Source\Engine.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="Source\ModelFileLoader.cpp">
@@ -250,7 +262,7 @@
     <ClInclude Include="Source\Headers\ImGUILayer.h">
       <Filter>Header\Layer</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Headers\Vulkan\VulkanBaseRenderer.h">
+    <ClInclude Include="Source\Headers\Vulkan\Engine.h">
       <Filter>Header\Vulkan</Filter>
     </ClInclude>
     <ClInclude Include="Source\Headers\Log.h">
