--- a/VKBaseProject.vcxproj
+++ b/VKBaseProject.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{36d97455-8199-4087-95de-c1f404ff8993}</ProjectGuid>
     <RootNamespace>VKBaseProject</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>VulkanBaseRenderer</ProjectName>
+    <ProjectName>VulkanRenderer</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
