--- a/VKBaseProject.vcxproj
+++ b/VKBaseProject.vcxproj
@@ -149,6 +149,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="Shaders\compile.bat" />
+    <None Include="Shaders\denoiser.glsl" />
     <None Include="Shaders\glsl\BSDF.glsl" />
     <None Include="Shaders\glsl\definitions.glsl" />
     <None Include="Shaders\glsl\fragShader.glsl" />
