--- a/VKBaseProject.vcxproj
+++ b/VKBaseProject.vcxproj
@@ -156,6 +156,7 @@
     <None Include="Shaders\glsl\intersections.glsl" />
     <None Include="Shaders\glsl\random.glsl" />
     <None Include="Shaders\glsl\rayTrace.comp" />
+    <None Include="Shaders\glsl\sample.glsl" />
     <None Include="Shaders\glsl\showTexture.frag.glsl" />
     <None Include="Shaders\glsl\showTexture.vert.glsl" />
     <None Include="Shaders\glsl\vertShader.glsl" />
@@ -169,6 +170,7 @@
     <ClInclude Include="include\imgui.h" />
     <ClInclude Include="include\imgui_internal.h" />
     <ClInclude Include="Source\Headers\Application.h" />
+    <ClInclude Include="Source\Headers\BVH.h" />
     <ClInclude Include="Source\Headers\Camera.h" />
     <ClInclude Include="Source\Headers\CameraController.h" />
     <ClInclude Include="Source\Headers\Core.h" />
@@ -226,6 +228,7 @@
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\Buffer.cpp" />
     <ClCompile Include="Source\BufferUtils.cpp" />
+    <ClCompile Include="Source\BVH.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\CameraController.cpp" />
     <ClCompile Include="Source\Cube.cpp" />
