--- a/imgui.ini
+++ b/imgui.ini
@@ -23,6 +23,10 @@ Pos=60,60
 Size=520,600
 
 [Window][Debug Window]
-Pos=16,14
+Pos=11,12
 Size=274,116
+
+[Window][Debug Panal]
+Pos=60,60
+Size=193,74
 
