SAH build correct, Flatten BVH wip(buggy)

--- a/VKBaseProject.vcxproj.filters
+++ b/VKBaseProject.vcxproj.filters
@@ -378,5 +378,8 @@
     <ClInclude Include="Source\Headers\BVH.h">
       <Filter>Header\Utils</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Headers\BVHTranslator.h">
+      <Filter>Header\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
